// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Sync application should fail on invalid setting pages when syncing a page pointing at an unknown front component 1`] = `
{
  "extensions": {
    "code": "METADATA_VALIDATION_FAILED",
    "errors": {
      "settingPage": [
        {
          "errors": [
            {
              "code": "SETTING_PAGE_FRONT_COMPONENT_NOT_FOUND",
              "message": "Front component "d1b2c3d4-0006-4000-a000-000000000006" not found",
              "userFriendlyMessage": "The front component this setting page renders was not found.",
            },
          ],
          "flatEntityMinimalInformation": {
            "title": "Orphan",
            "universalIdentifier": Any<String>,
          },
          "metadataName": "settingPage",
          "status": "fail",
          "type": "create",
        },
      ],
    },
    "message": "Validation failed for 1 settingPage",
    "summary": {
      "settingPage": 1,
      "totalErrors": 1,
    },
    "userFriendlyMessage": "The front component this setting page renders was not found.",
  },
  "message": "Validation errors occurred while syncing application manifest metadata",
  "name": "GraphQLError",
}
`;

exports[`Sync application should fail on invalid setting pages when syncing a page with an empty title 1`] = `
{
  "extensions": {
    "code": "METADATA_VALIDATION_FAILED",
    "errors": {
      "settingPage": [
        {
          "errors": [
            {
              "code": "INVALID_SETTING_PAGE_INPUT",
              "message": "Setting page title is required",
              "userFriendlyMessage": "Setting page title is required",
            },
          ],
          "flatEntityMinimalInformation": {
            "title": "",
            "universalIdentifier": Any<String>,
          },
          "metadataName": "settingPage",
          "status": "fail",
          "type": "create",
        },
      ],
    },
    "message": "Validation failed for 1 settingPage",
    "summary": {
      "settingPage": 1,
      "totalErrors": 1,
    },
    "userFriendlyMessage": "Setting page title is required",
  },
  "message": "Validation errors occurred while syncing application manifest metadata",
  "name": "GraphQLError",
}
`;

exports[`Sync application should fail on invalid setting pages when syncing a page with the reserved General title 1`] = `
{
  "extensions": {
    "code": "METADATA_VALIDATION_FAILED",
    "errors": {
      "settingPage": [
        {
          "errors": [
            {
              "code": "RESERVED_SETTING_PAGE_TITLE",
              "message": "Setting page title "General" is reserved",
              "userFriendlyMessage": "This setting page title is reserved.",
            },
          ],
          "flatEntityMinimalInformation": {
            "title": "General",
            "universalIdentifier": Any<String>,
          },
          "metadataName": "settingPage",
          "status": "fail",
          "type": "create",
        },
      ],
    },
    "message": "Validation failed for 1 settingPage",
    "summary": {
      "settingPage": 1,
      "totalErrors": 1,
    },
    "userFriendlyMessage": "This setting page title is reserved.",
  },
  "message": "Validation errors occurred while syncing application manifest metadata",
  "name": "GraphQLError",
}
`;

exports[`Sync application should fail on invalid setting pages when two pages collide on the position the manifest omits 1`] = `
{
  "extensions": {
    "code": "METADATA_VALIDATION_FAILED",
    "errors": {
      "settingPage": [
        {
          "errors": [
            {
              "code": "SETTING_PAGE_POSITION_ALREADY_TAKEN",
              "message": "Another setting page already uses position 0",
              "userFriendlyMessage": "Another setting page of this application already uses this position.",
            },
          ],
          "flatEntityMinimalInformation": {
            "title": "First",
            "universalIdentifier": Any<String>,
          },
          "metadataName": "settingPage",
          "status": "fail",
          "type": "create",
        },
      ],
    },
    "message": "Validation failed for 1 settingPage",
    "summary": {
      "settingPage": 1,
      "totalErrors": 1,
    },
    "userFriendlyMessage": "Another setting page of this application already uses this position.",
  },
  "message": "Validation errors occurred while syncing application manifest metadata",
  "name": "GraphQLError",
}
`;

exports[`Sync application should fail on invalid setting pages when two pages of the same scope share a position 1`] = `
{
  "extensions": {
    "code": "METADATA_VALIDATION_FAILED",
    "errors": {
      "settingPage": [
        {
          "errors": [
            {
              "code": "SETTING_PAGE_POSITION_ALREADY_TAKEN",
              "message": "Another setting page already uses position 1",
              "userFriendlyMessage": "Another setting page of this application already uses this position.",
            },
          ],
          "flatEntityMinimalInformation": {
            "title": "First",
            "universalIdentifier": Any<String>,
          },
          "metadataName": "settingPage",
          "status": "fail",
          "type": "create",
        },
      ],
    },
    "message": "Validation failed for 1 settingPage",
    "summary": {
      "settingPage": 1,
      "totalErrors": 1,
    },
    "userFriendlyMessage": "Another setting page of this application already uses this position.",
  },
  "message": "Validation errors occurred while syncing application manifest metadata",
  "name": "GraphQLError",
}
`;
